objects/OptyHisAct__c.object
<CustomObject>
    <description>To capture Tasks &amp; Events pertaining to the most recent Opportunity for the Prospect (determined by Opportunity &apos;Created Date&apos;)</description>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-on-One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_CloseDate__c</fullName>
        <label>End/Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Stage_To_Stage__c</fullName>
        <label>From Stage-To Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Stage__c</fullName>
        <label>From Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up/Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm Literature Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discuss Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Please enter a result when changing the status to Completed.</description>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message/VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success - Follow Up Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful - Follow Up Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_days__c</fullName>
        <label>Stage Duration (days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Regarding</label>
        <picklist>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage/Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFN National Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference/Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Stage__c</fullName>
        <label>To Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>What Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OptyHisActs</relationshipLabel>
        <relationshipName>OptyHisActs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_Id__c</fullName>
        <label>Who Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OptyHisActs</relationshipLabel>
        <relationshipName>OptyHisActs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>OptyHisAct</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Opportunity Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OptyHisActs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>